--- a/index.html
+++ b/index.html
@@ -2,28 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Black Anchor Works LLC</title>
   <style>
-    body { 
-      font-family: system-ui, sans-serif; 
-      background: #000; 
-      color: #fff; 
-      margin: 0; 
-      display: flex; 
-      flex-direction: column; 
-      align-items: center; 
-      justify-content: center; 
-      height: 100vh;
+    /* Base styles */
+    :root {
+      --bg: #ffffff;
+      --text: #111111;
+      --accent: #000000;
+      --gray: #666666;
+    }
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      align-items: center;
+      justify-content: center;
       text-align: center;
     }
-    h1 { font-size: 2rem; margin: 0.5em 0; }
-    p { max-width: 400px; line-height: 1.5; }
+    .logo {
+      width: 80px;
+      height: 80px;
+      margin-bottom: 1rem;
+    }
+    h1 {
+      font-size: 1.8rem;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      margin: 0;
+    }
+    p {
+      max-width: 500px;
+      color: var(--gray);
+      margin: 0.75rem auto 2rem;
+      line-height: 1.6;
+    }
+    footer {
+      position: absolute;
+      bottom: 1rem;
+      font-size: 0.85rem;
+      color: var(--gray);
+    }
+    /* Anchor SVG */
+    svg {
+      stroke: var(--accent);
+      stroke-width: 2;
+      fill: none;
+    }
   </style>
 </head>
 <body>
+  <!-- Minimalist anchor logo -->
+  <div class="logo">
+    <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+      <line x1="32" y1="8" x2="32" y2="44" />
+      <circle cx="32" cy="8" r="4" />
+      <path d="M16,44 A16,16 0 0,0 48,44 L32,44 Z" />
+    </svg>
+  </div>
+
   <h1>Black Anchor Works LLC</h1>
-  <p>Independent contracting, technology, and remote services — built on integrity and precision.</p>
-  <p>Contact: <a href="mailto:hello@blackanchorworks.com" style="color:#fff;">hello@blackanchorworks.com</a></p>
+  <p>Professional contracting and independent services built on precision, reliability, and integrity.</p>
+
+  <footer>
+    © <span id="year"></span> Black Anchor Works LLC
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
